--- a/sections/media-with-popup-text.liquid
+++ b/sections/media-with-popup-text.liquid
@@ -4,7 +4,9 @@
 ------------------------------------------------------------------------------------------------------------------------
 CSS
 ------------------------------------------------------------------------------------------------------------------------
-{%- endcomment -%}{% style %}
+{%- endcomment -%}<script src="jquery-3.6.4.min.js"></script>
+
+{% style %}
   .Click-here {
     cursor: pointer;
     background-image: linear-gradient(190deg, #f83600 0%, #fee140 100%);
