--- a/sections/media-with-popup-text.liquid
+++ b/sections/media-with-popup-text.liquid
@@ -4,9 +4,7 @@
 ------------------------------------------------------------------------------------------------------------------------
 CSS
 ------------------------------------------------------------------------------------------------------------------------
-{%- endcomment -%}<script src="jquery-3.6.4.min.js"></script>
-
-{% style %}
+{%- endcomment -%}{% style %}
   .Click-here {
     cursor: pointer;
     background-image: linear-gradient(190deg, #f83600 0%, #fee140 100%);
