--- a/sections/media-with-popup-text.liquid
+++ b/sections/media-with-popup-text.liquid
@@ -178,6 +178,18 @@ CSS
   $(".close-btn, .bg-overlay").click(function() {
     $(".custom-model-main").removeClass('model-open');
   });
+
+
+
+// TAB
+// $(document).on('click', '.tab-wrap ul li a', function (e) {
+//     var curTabContentId = $(this).attr('href');
+//     $(this).parents('.tab-wrap').find('ul li').removeClass('active');
+//     $(this).parents('li').addClass('active');
+//     $(this).parents('.tab-wrap').find('.tab-content-id').removeClass('active');
+//     $(curTabContentId).addClass("active");
+//     e.preventDefault();
+// });
 </script>
 
 {%- comment -%}
@@ -312,6 +324,27 @@ LIQUID
     {%- endfor -%}
   </media-with-text>
 </div>
+
+<script>
+  $(".Click-here").on('click', function() {
+    $(".custom-model-main").addClass('model-open');
+  });
+  $(".close-btn, .bg-overlay").click(function() {
+    $(".custom-model-main").removeClass('model-open');
+  });
+
+
+
+// TAB
+// $(document).on('click', '.tab-wrap ul li a', function (e) {
+//     var curTabContentId = $(this).attr('href');
+//     $(this).parents('.tab-wrap').find('ul li').removeClass('active');
+//     $(this).parents('li').addClass('active');
+//     $(this).parents('.tab-wrap').find('.tab-content-id').removeClass('active');
+//     $(curTabContentId).addClass("active");
+//     e.preventDefault();
+// });
+</script>
 
 {% schema %}
   {
