--- a/sections/media-with-popup-text.liquid
+++ b/sections/media-with-popup-text.liquid
@@ -172,7 +172,7 @@ CSS
 </style>
 
 <script>
-  $(".Click-here").on('click', function() {
+  $(clickhere).on('click', function() {
     $(".custom-model-main").addClass('model-open');
   });
   $(".close-btn, .bg-overlay").click(function() {
@@ -281,7 +281,7 @@ LIQUID
             custom code start
             {% endcomment %}
 
-            <div class="Click-here">Click Here</div>
+            <div class="Click-here" id="clickhere">Click Here</div>
             <div class="custom-model-main">
               <div class="custom-model-inner">
                 <div class="close-btn">×</div>
