--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -18,6 +18,8 @@ all events, dependencies...) in the "documentation.txt" file, located in the Ass
     <script async src='https://whatsapp.bossapps.co/js/script?shop=trhw-7357.myshopify.com'></script>
     <!-- Tido Whatsapp Pixel ended-->
 
+    <script src="jquery-3.6.4.min.js"></script>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="theme-color" content="{{ settings.header_background }}">
