--- a/sections/media-with-popup-text.liquid
+++ b/sections/media-with-popup-text.liquid
@@ -5,80 +5,134 @@
 CSS
 ------------------------------------------------------------------------------------------------------------------------
 {%- endcomment -%}{% style %}
-  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600 &display=swap');
-
-  button {
-    background-color: rebeccapurple;
-    outline: none;
-    border: none;
-    padding: 10px 20px;
-    font-weight: bold;
-    font-size: 1.5rem;
-    color: #ffffff;
-    margin: 30px;
-    border-radius: 20px;
-    box-shadow: 1px 6px 12px 0 rgb(0 0 0 / 13%);
-    cursor: pointer;
-    transition: 0.2s all ease-in-out;
-  }
-  button:hover {
-    background-color: orange;
-  }
-  #popup {
+  .popup {
     display: none;
+    position: fixed;
+    padding: 10px;
+    width: 280px;
+    left: 50%;
+    margin-left: -150px;
+    height: 180px;
+    top: 50%;
+    margin-top: -100px;
+    background: #FFF;
+    border: 3px solid #F04A49;
+    z-index: 20;
   }
-  .popup-container {
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(96 95 127 / 70%);
-    position: absolute;
+
+  #popup:after {
+    position: fixed;
+    content: "";
     top: 0;
     left: 0;
+    bottom: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: -2;
   }
-  .popup {
-    background-color: #ffffff;
-    padding: 20px 30px;
-    width: 50%;
-    border-radius: 15px;
+
+  #popup:before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: #FFF;
+    z-index: -1;
   }
-  .close-popup {
-    display: flex;
-    justify-content: flex-end;
+
+  /* Styling buttons & webpage */
+
+  body {
+    background: offwhite;
+    font-family: Arial, sans-serif;
+    text-align: center;
   }
-  .close-popup a {
-    font-size: 1.2rem;
-    background-color: rebeccapurple;
-    color: #fff;
-    padding: 5px 10px;
-    font-weight: bold;
-    text-decoration: none;
-    border-radius: 10px;
-    display: inline-block;
+
+  button {
+    margin-top: 50px;
+    background-color: rgba(255, 255, 255, 0.3);
+    border: 3px solid #F04A49;
+    color: #F04A49;
+    font-size: 25px;
+    padding: 10px 20px;
+
   }
-  .popup > h2 {
-    font-size: 1.6rem;
-    margin-bottom: 10px;
+
+  button:hover {
+    background-color: #F04A49;
+    color: #FFF;
+    border: 3px solid #F04A49;
+    transition: all 0.3s ease 0s;
   }
-  .popup > p {
-    font-size: 1.2rem;
-    margin-bottom: 10px;
+
+  p {
+    margin: 1em 0;
+    font-size: 16px;
   }
-  .popup-btn {
-    display: inline-block;
-    text-decoration: none;
-    border: 2px solid rebeccapurple;
-    padding: 5px 15px;
-    border-radius: 20px;
-    margin: 10px 0;
-    transition: 0.2s all ease-in;
+
+
+  .popupk {
+    display: none;
+    position: fixed;
+    padding: 10px;
+    width: 280px;
+    left: 50%;
+    margin-left: -150px;
+    height: 180px;
+    top: 50%;
+    margin-top: -100px;
+    background: #FFF;
+    border: 3px solid #F04A49;
+    z-index: 20;
   }
-  .popup-btn:hover {
-    background-color: rebeccapurple;
-    color: #fff;
+
+  #popupk:after {
+    position: fixed;
+    content: "";
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: -2;
+  }
+
+  #popupk:before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: #FFF;
+    z-index: -1;
+  }
+
+  /* Styling buttons & webpage */
+
+
+  button {
+    margin-top: 50px;
+    background-color: rgba(255, 255, 255, 0.3);
+    border: 3px solid #F04A49;
+    color: #F04A49;
+    font-size: 25px;
+    padding: 10px 20px;
+
+  }
+
+  button:hover {
+    background-color: #F04A49;
+    color: #FFF;
+    border: 3px solid #F04A49;
+    transition: all 0.3s ease 0s;
+  }
+
+  p {
+    margin: 1em 0;
+    font-size: 16px;
   }
 {% endstyle %}
 
@@ -137,12 +191,16 @@ CSS
 </style>
 
 <script>
-  $(clickhere).on('click', function() {
-    $(".custom-model-main").addClass('model-open');
-  });
-  $(".close-btn, .bg-overlay").click(function() {
-    $(".custom-model-main").removeClass('model-open');
-  });
+  $ = function(id) {
+    return document.getElementById(id);
+  }
+
+  var show = function(id) {
+    $(id).style.display = 'block';
+  }
+  var hide = function(id) {
+    $(id).style.display = 'none';
+  }
 </script>
 
 {%- comment -%}
@@ -246,21 +304,38 @@ LIQUID
             custom code start
             {% endcomment %}
 
-            <button id="clickBtn">Click Me To See PopUp</button>
-            <div id="popup">
-              <div class="popup-container">
-                <div class="popup">
-                  <div class="close-popup" id="closeBtn">
-                    <a href="#">X</a>
-                  </div>
-                  <h2>Custom Popup</h2>
-                  <p>
-                    This is a custom popup. You can just put any content behind it. Also you can apply any custom style
-                    in this popup.
-                  </p>
-                  <a href="#" class="popup-btn">View Details</a>
-                </div>
-              </div>
+            <button
+              class="button"
+              href="#"
+              onclick="show('popup')">Button</button>
+
+            <!-- This is what will be included inside the popup -->
+            <div class="popup" id="popup">
+              <p>This is a popup!</p>
+              <p>Overlay uses
+                <b>:before</b>
+                and
+                <b>:after</b>
+                pseudo-classes.</p>
+              <p>Website will still remain visible behind this popup.</p>
+              <a href="#" onclick="hide('popup')">Close</a>
+            </div>
+
+
+            <button
+              class="button"
+              href="#"
+              onclick="show('popupk')">Button</button>
+
+            <div class="popupk" id="popupk">
+              <p>lalalalalal!</p>
+              <p>Overlay uses
+                <b>:before</b>
+                and
+                <b>:after</b>
+                pseudo-classes.</p>
+              <p>Website will still remain visible behind this popup.</p>
+              <a href="#" onclick="hide('popupk')">Close</a>
             </div>
 
             {% comment %}
