--- a/sections/media-with-popup-text.liquid
+++ b/sections/media-with-popup-text.liquid
@@ -5,152 +5,60 @@
 CSS
 ------------------------------------------------------------------------------------------------------------------------
 {%- endcomment -%}{% style %}
- *,
-*:before,
-*:after {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
+  #popup-button {
+    width: 50px;
+    height: 30px;
+    background: #555;
+    border: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+  }
 
-/* Page wrapper */
-.wrapper {
-  width: 90%;
-  max-width: 800px;
-  margin: 60px auto;
-  text-align: center;
-}
+  .mask {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.75);
+  }
 
-/* Icons */
-.icon {
-  width: 20px;
-  height: 20px;
-}
-
-/* Headings */
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  color: #222;
-  font-weight: 700;
-  font-family: inherit;
-  line-height: 1.333;
-  text-rendering: optimizeLegibility;
-}
-
-/* PopUp ($popup) */
-.popup {
-  position: absolute;
-  z-index: 10;
-  top: 0;
-  left: 0;
-  visibility: hidden;
-  width: 100%;
-  height: 100%;
-}
-
-.popup.popup-active {
-  visibility: visible;
-}
-
-.popup-overlay {
-  position: fixed;
-  z-index: 8;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  visibility: hidden;
-  opacity: 0;
-  transition: visibility 0s linear 0.3s, opacity 0.3s;
-}
-
-.popup.popup-active .popup-overlay {
-  opacity: 1;
-  visibility: visible;
-  transition-delay: 0s;
-}
-
-.popup-wrapper {
-  position: absolute;
-  z-index: 9;
-  top: 50%;
-  left: 50%;
-  width: 50%;
-  background-color: #fff;
-}
-
-.popup-transition {
-  transition: all 0.3s 0.12s;
-  transform: translate(-40%, -50%);
-  opacity: 0;
-}
-
-.popup.popup-active .popup-transition {
-  transform: translate(-50%, -50%);
-  opacity: 1;
-}
-
-.popup-header,
-.popup-content {
-  padding: 15px;
-}
-
-.popup-header {
-  position: relative;
-  background-color: #fff;
-  border-bottom: 1px solid #e8e8e8;
-}
-
-.popup-close {
-  position: absolute;
-  top: 0;
-  right: 0;
-  padding: 1em;
-  color: #aaa;
-  background: none;
-  border: 0;
-}
-
-.popup-close:hover {
-  color: #777;
-}
-
-.popup-heading {
-  font-size: 18px;
-  margin: 0;
-}
-
-.popup-content p {
-  margin-top: 0;
-  margin-bottom: 10px;
-}
-
-button.popup-toggle:not(.popup-close) {
-  padding: 10px 20px;
-  border: solid 1px #eee;
-  border-radius: 35px;
-  background-color: #eee;
-  transition: 0.3s;
-}
-
-button.popup-toggle:hover {
-  background-color: #ddd;
-  cursor: pointer;
-}
-
+  #popup-body {
+    display: none;
+    top: 0;
+    position: fixed;
+    width: 500px;
+    height: 300px;
+    background: #ccc;
+  }
 {% endstyle %}
 
 <script>
-  $(".popup-toggle").on("click", function (e) {
-    e.preventDefault();
-    $(".popup").toggleClass("popup-active");
-  });
-  
+  (function() {
+
+// detect width and height of the window.
+    var vWidth = $(window).width();
+    var vHeight = $(window).height();
+
+// detect width and height of popup.
+    var popWidth = $('#popup-body').outerWidth();
+    var popHeight = $('#popup-body').outerHeight();
+
+// trigger popup
+    $('#popup-button').click(function() {
+      $('#mask').addClass('mask');
+      $('#popup-body').css({
+        display: 'block',
+        left: (vWidth - popWidth) / 2 + 'px',
+        top: (vHeight - popHeight) / 2 + 'px'
+      });
+      $('#mask').click(function() {
+        $('#mask').removeClass('mask');
+        $('#popup-body').css({display: 'none'})
+      });
+
+    })
+  })();
 </script>
 
 
@@ -321,31 +229,9 @@ LIQUID
 
 
 
-            <div class="wrapper">
-              <h1>Simple jQuery PopUp</h1>
-              <button class="popup-toggle">Show PopUp</button>
-            </div>
-            
-            <div class="popup">
-              <div class="popup-overlay"></div>
-              <div class="popup-wrapper popup-transition">
-                <div class="popup-header">
-                  <button class="popup-close popup-toggle">
-                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times" class="icon svg-inline--fa fa-times fa-w-11" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 352 512">
-                      <path fill="currentColor" d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z">
-                      </path>
-                    </svg>
-                  </button>
-                  <h2 class="popup-heading">This is a PopUp</h2>
-                </div>
-            
-                <div class="popup-body">
-                  <div class="popup-content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit eum delectus, libero, accusantium dolores inventore obcaecati placeat cum sapiente vel laboriosam similique totam id ducimus aperiam, ratione fuga blanditiis maiores.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <button id="popup-button">button</button>
+            <div id="mask"></div>
+            <div id="popup-body">cghdfghfgh</div>
 
 
             {% comment %}
