--- a/sections/media-with-popup-text.liquid
+++ b/sections/media-with-popup-text.liquid
@@ -5,6 +5,15 @@
 CSS
 ------------------------------------------------------------------------------------------------------------------------
 {%- endcomment -%}{% style %}
+
+  body {
+    font: normal 14px / 100% "Andale Mono", AndaleMono, monospace;
+    width: 300px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    height: 100vh;
+  }
   .Click-here {
     cursor: pointer;
     background-image: linear-gradient(190deg, #f83600 0%, #fee140 100%);
