--- a/sections/media-with-popup-text.liquid
+++ b/sections/media-with-popup-text.liquid
@@ -142,31 +142,12 @@ CSS
 {% endstyle %}
 
 <script>
-  (function() {
-
-// detect width and height of the window.
-    var vWidth = $(window).width();
-    var vHeight = $(window).height();
-
-// detect width and height of popup.
-    var popWidth = $('#popup-body').outerWidth();
-    var popHeight = $('#popup-body').outerHeight();
-
-// trigger popup
-    $('#popup-button').click(function() {
-      $('#mask').addClass('mask');
-      $('#popup-body').css({
-        display: 'block',
-        left: (vWidth - popWidth) / 2 + 'px',
-        top: (vHeight - popHeight) / 2 + 'px'
-      });
-      $('#mask').click(function() {
-        $('#mask').removeClass('mask');
-        $('#popup-body').css({display: 'none'})
-      });
-
-    })
-  })();
+  $(".Click-here").on('click', function() {
+    $(".custom-model-main").addClass('model-open');
+  });
+  $(".close-btn, .bg-overlay").click(function() {
+    $(".custom-model-main").removeClass('model-open');
+  });
 </script>
 
 
