--- a/sections/media-with-popup-text.liquid
+++ b/sections/media-with-popup-text.liquid
@@ -198,8 +198,12 @@ LIQUID
 
             <div id="popup" class="popup">
               <div class="popup-content">
-                <h2>Welcome to our store!</h2>
-                <p>Get 10% off your first order with code "POPUP10".</p>
+                {%- if block.settings.title != blank -%}
+                  <p class="h2">
+                    {%- render 'styled-text', content: block.settings.title, gradient: block.settings.text_gradient -%}
+                  </p>
+                {%- endif -%}
+                {{- block.settings.content -}}
                 <a href="#" id="close-btn">Close</a>
               </div>
             </div>
