--- a/sections/media-with-popup-text.liquid
+++ b/sections/media-with-popup-text.liquid
@@ -15,6 +15,7 @@ CSS
     display: none;
     justify-content: center;
     align-items: center;
+    margin-inline: 20%;
   }
 
   .popup-content {
