--- a/sections/media-with-popup-text.liquid
+++ b/sections/media-with-popup-text.liquid
@@ -591,7 +591,7 @@ LIQUID
           }, {
             "type": "richtext",
             "id": "popupcontent",
-            "label": "Content",
+            "label": "Popup Content",
             "default": "<p>Use this text to share information about your brand with your customers. Describe a product, share announcements, or welcome customers to your store.</p>"
           }, {
             "type": "text",
